--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.8.1
 Django==5.1.4
+gunicorn==23.0.0
+packaging==24.2
+pillow==11.0.0
+psycopg2-binary==2.9.10
+python-dotenv==1.0.1
 sqlparse==0.5.2
 tzdata==2024.2
-python-dotenv==1.0.1
-pillow==10.3.0
