--- a/kubernetes-manifests/nginx/deployment.yaml
+++ b/kubernetes-manifests/nginx/deployment.yaml
@@ -11,7 +11,8 @@ spec:
       labels:
         app: nginx-deployment
     spec:
+      containers:
       - name: nginx
         image: nginx:latest
         ports:
-          - containerPort: 80
+        - containerPort: 80
