--- a/kubernetes-manifests/hobbysite-loadbalancer.yaml
+++ b/kubernetes-manifests/hobbysite-loadbalancer.yaml
@@ -4,6 +4,6 @@ metadata:
   name: hobbysite-balancer
 spec:
   type: LoadBalancer
-  loadBalancerIP: 10.10.10.10
+  loadBalancerIP: 34.92.178.3
   selector:
-    name: nginx-deployment
+    name: hobbysite-deployment
