--- a/kubernetes-manifests/postgres-deployment.yaml
+++ b/kubernetes-manifests/postgres-deployment.yaml
@@ -17,5 +17,8 @@ spec:
       containers:
       - name: postgres
         image: postgres
+        envFrom:
+          - secretRef:
+              name:hobbysite-secret
         ports:
         - containerPort: 5432
