postgres persistent volume

--- a/kubernetes-manifests/postgres-deployment.yaml
+++ b/kubernetes-manifests/postgres-deployment.yaml
@@ -22,3 +22,10 @@ spec:
               name: hobbysite-secret
         ports:
         - containerPort: 5432
+        volumeMounts:
+          - mountPath: /var/lib/postgresql/data
+            name: postgresdata
+      volumes:
+        - name: postgresdata
+          persistentVolumeClaim:
+            claimName: postgres-volume-claim
