--- a/kubernetes-manifests/hobbysite-loadbalancer.yaml
+++ b/kubernetes-manifests/hobbysite-loadbalancer.yaml
@@ -8,6 +8,6 @@ spec:
   selector:
     name: hobbysite-deployment
   ports:
-    protocol: TCP
+  - protocol: TCP
     port: 80
     targetPort: 8000
