--- a/kubernetes-manifests/global-ingress.yaml
+++ b/kubernetes-manifests/global-ingress.yaml
@@ -7,15 +7,7 @@ metadata:
     kubernetes.io/ingress.global-static-ip-name: "global-ingress"
 spec:
   rules:
-  - http:
-      paths:
-      - path: /api
-        pathType: ImplementationSpecific
-        backend:
-          service:
-            name: postgres-deployment
-            port:
-              number: 5432
+  - https:
       - path: /
         pathType: ImplementationSpecific
         backend:
