--- a/kubernetes-manifests/global-ingress.yaml
+++ b/kubernetes-manifests/global-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.global-static-ip-name: "global-ingress"
 spec:
   rules:
-  - https:
+  - http:
       - path: /
         pathType: ImplementationSpecific
         backend:
