--- a/kubernetes-manifests/db/psql-deployment.yml
+++ b/kubernetes-manifests/db/psql-deployment.yml
@@ -24,3 +24,7 @@ spec:
         volumeMounts:
           - mountPath: /var/lib/postgres/data
             name: db-data
+    volumes:
+    - name: db-data
+      persistentVolumeClaim:
+        claimName: postgres-pvc
