--- a/kubernetes-manifests/db/psql-deployment.yml
+++ b/kubernetes-manifests/db/psql-deployment.yml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: postgres-deployment
   namespace: django-app
 spec:
   replicas: 1
@@ -15,16 +15,16 @@ spec:
     spec:
       containers:
       - name: postgresdb
-        image: postgres
+        image: 'postgres'
         ports:
-        - containerPort: 5432
+          - containerPort: 5432
         envFrom:
-        - configMapRef:
-          name: db-secret-credentials
+          - configMapRef:
+              name: db-secret-credentials
         volumeMounts:
-          - name: db-data
-            mountPath: /var/lib/postgres/data
+          - mountPath: /var/lib/postgres/data
+            name: db-data
       volumes:
-      - name: db-data
-        persistentVolumeClaim:
-          claimName: postgres-pvc
+        - name: db-data
+          persistentVolumeClaim:
+            claimName: postgres-pvc
