--- a/kubernetes-manifests/nginx/nginx-deployment.yml
+++ b/kubernetes-manifests/nginx/nginx-deployment.yml
@@ -17,7 +17,7 @@ spec:
       - name: nginx
         configMap:
         name: nginx-cm
-      - name: staticfiles:
+      - name: staticfiles
         persistentVolumeClaim:
           claimName: staticfiles-pvc
       containers:
