--- a/kubernetes-manifests/nginx/nginx-deployment.yml
+++ b/kubernetes-manifests/nginx/nginx-deployment.yml
@@ -26,9 +26,9 @@ spec:
         ports:
           - containerPort: 80
         volumeMounts:
-          - mountPath: /etc/nginx/conf.d/default.conf
-            subPath: default.conf
-            name: nginx
+          - name: nginx
+            mountPath: /etc/nginx/conf.d/default.conf
+            subPath: default.conf          
             readOnly: true
           - mountPath: "/static"
             name: staticfiles
