--- a/kubernetes-manifests/app/app-deployment.yml
+++ b/kubernetes-manifests/app/app-deployment.yml
@@ -26,5 +26,5 @@ spec:
         - configMapRef:
             name: app-cm
         volumeMounts:
-          - mountPath: "/static"
+          - mountPath: "/var/static"
             name: staticfiles
