--- a/kubernetes-manifests/nginx/nginx-deployment.yml
+++ b/kubernetes-manifests/nginx/nginx-deployment.yml
@@ -24,3 +24,10 @@ spec:
         image: nginx
         ports:
           - containerPort: 80
+        volumeMounts:
+          - mountPath: /etc/nginx/conf.d/default.conf
+            subPath: default.conf
+            name: nginx
+            readOnly: true
+          - mountPath: "/var/static"
+            name: staticfiles
